tenants/bookwork/components/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookwork
  labels:
    name: bookwork
    managed-by: argocd
