tenants/bookwork/components/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwork-ingress
  annotations:
    # Tell Kubernetes which controller to use
    kubernetes.io/ingress.class: "nginx"
    # Request Cert-Manager to issue a certificate
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    #Sync Wave order - created after namespace
    argocd.argoproj.io/sync-wave: "1"
spec:
  tls:
    - hosts:
        - "bookwork-demo.com"
        - "www.bookwork-demo.com"
      secretName: bookwork-tls-secret # Cert-Manager will create this
  rules:
    - host: "bookwork-demo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookwork-frontend
                port:
                  number: 80
    - host: "www.bookwork-demo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookwork-frontend
                port:
                  number: 80
